operator/pkg/gateway-api/testdata/gateway/listenerset-allowed-namespace-same/input/listenerset-allowed-namespace-same.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: other-ns
  labels:
    kubernetes.io/metadata.name: other-ns
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: allowed-namespace-same
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: Same
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: same-namespace
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: allowed-namespace-same
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: cross-namespace
  namespace: other-ns
spec:
  parentRef:
    name: allowed-namespace-same
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-http
      port: 9090
      protocol: HTTP
